--- a/templates/_metatags.html
+++ b/templates/_metatags.html
@@ -2,10 +2,11 @@
 <meta property="og:type"               content="article" />
 <meta property="og:title"              content="COVID-19 Reddit Algo-Tracker" />
 <meta property="og:description"        content="How do reddit’s popularity algorithms promote information about COVID-19?" />
-<meta property="og:image"              content="assets/preview-image.png" />
+<meta property="og:image"              content="https://covid-algotracker.citizensandtech.org/assets/preview-image.png" />
 <meta name="twitter:card"              content="summary" />
+<meta name="twitter:site"              content="@natematias" />
 <meta name="twitter:creator"           content="@natematias" />
 <meta name="twitter:title" content="COVID-19 Reddit Algo-Tracker"
 <meta name="twitter:description" content="How do reddit's popularity algorithms promote information about COVID-19?"/>
-<meta name="twitter:image" content="assets/preview-image.png"/>
+<meta name="twitter:image" content="https://covid-algotracker.citizensandtech.org/assets/preview-image.png"/>
 
