updated meta tags

--- a/templates/_metatags.html
+++ b/templates/_metatags.html
@@ -6,7 +6,7 @@
 <meta name="twitter:card"              content="summary" />
 <meta name="twitter:site"              content="@natematias" />
 <meta name="twitter:creator"           content="@natematias" />
-<meta name="twitter:title" content="COVID-19 Reddit Algo-Tracker"
+<meta name="twitter:title" content="COVID-19 Reddit Algo-Tracker"/>
 <meta name="twitter:description" content="How do reddit's popularity algorithms promote information about COVID-19?"/>
 <meta name="twitter:image" content="https://covid-algotracker.citizensandtech.org/assets/preview-image.png"/>
 
