--- a/templates/_favicon.html
+++ b/templates/_favicon.html
@@ -1,4 +1,2 @@
-<link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon/favicon-16x16.png">
+<link rel="icon" type="image/png" href="../assets/algotracker-logo-favicon.png">
 
