Add meta tag preventing the page from being cached

--- a/templates/_metatags.html
+++ b/templates/_metatags.html
@@ -1,3 +1,5 @@
+<meta http-equiv="cache-control" content="private, max-age=0, no-cache" />
+
 <meta property="og:url"                content="https://covid-algotracker.citizensandtech.org/" />
 <meta property="og:type"               content="article" />
 <meta property="og:title"              content="COVID-19 Reddit Algo-Tracker" />
