--- a/templates/_metatags.html
+++ b/templates/_metatags.html
@@ -1,4 +1,4 @@
-<meta http-equiv="cache-control" content="private, max-age=0, no-cache" />
+<meta http-equiv="cache-control" content="max-age=0, no-cache, no-store" />
 
 <meta property="og:url"                content="https://covid-algotracker.citizensandtech.org/" />
 <meta property="og:type"               content="article" />
